ingress-nginx/tomcat-demo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-demo-deployment
  labels:
    app: tomcat-demo-v8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat-demo-v8
  template:
    metadata:
      labels:
        app: tomcat-demo-v8
    spec:
      containers:
      - name: tomcat-demo-v8
        image: tomcat:8.0.52-jre8
        ports:
        - containerPort: 8080
