ingress-nginx/tomcat-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-demo-v1-ingress
  namespace: ingress-nginx
spec:
  rules:
  - host: tomcat.demo
    http:
      paths:
      - backend:
          serviceName: tomcat-demo-v8-service
          servicePort: 8080
